--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@antimatter-labs/eslint-plugin-no-anonymous-use-effect-callback-rule",
   "version": "1.0.0",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "cjs/index.js",
   "files": [
     "cjs",
